# polysigkernel_exp

./: LICENCE  README.md  pyproject.toml  setup.py
experiments/: error_analysis.py  plots.ipynb  quicktest.py  time_analysis.py
experiments/results/: error_brownian_64bit.csv  error_sincos.csv  time_approx.csv
polysigkernel/: __init__.py  _hyp0f1.py  monomial_interpolation_solver.py  sigkernel.py
src/: config.py  monomial_approximation_solver.py  sigkernel.py  static_kernels.py  utils.py
