[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polysigkernel"
version = "0.1"
authors = [{name="Francesco Piatti", email="piatti.francesco@outlook.com" }]
description = "Polynomial-based Schemes for Signature Kernels"
readme = "README.md"
requires-python = ">=3.8"

classifiers = [    
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/FrancescoPiatti/polysigkernel"
Issues = "https://github.com/FrancescoPiatti/polysigkernel"